añade estilo a los elementos del encriptador

--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
 </head>
 <body>
     <header>
-        <img src="assets/LogoVector.svg" alt="Logo de Alura" class="logo">
+        <img src="assets/Logo.svg" alt="Logo de Alura" class="logo">
     </header>
 
     <main>
         <section class="section-one">
                 <textarea placeholder="Ingrese el texto aqui" class="text-area" cols="30" rows="10"></textarea>
 
-                <div class="text-container">
-                    <img src="assets/exclamation-icon.svg" alt="Icono de exclamación" class="icon">
-                    <p class="info">Solo letras minúsculas y sin acentos</p>
+                <div class="warning-container">
+                    <h6 class="warning"><img src="assets/exclamation-icon.svg" alt="Icono de exclamación" class="icon"> Solo letras minúsculas y sin acentos</h6>
                 </div>
 
                 <div class="buttons-container">
@@ -27,9 +26,9 @@
                 </div>
         </section>
 
-        <section>
+        <section class="section-two">
             <div class="message-container">
-                <img src="assets/Muñeco.png">
+                <img src="assets/Muñeco.svg" class="message-img">
                 <h2>Ningún mensaje fue encontrado</h2>
                 <p>Ingresa el texto que desees encriptar o desencriptar.</p>
             </div>
