--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="esp">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="/style.css">
     <title>Encriptador</title>
 </head>
+
 <body>
     <header>
         <img src="assets/Logo.svg" alt="Logo de Alura" class="logo">
@@ -14,25 +16,32 @@
 
     <main>
         <section class="section-one">
-                <textarea placeholder="Ingrese el texto aqui" class="text-area" cols="30" rows="10"></textarea>
+            <textarea placeholder="Ingrese el texto aqui" class="text-area" cols="30" rows="10"></textarea>
 
-                <div class="warning-container">
-                    <h6 class="warning"><img src="assets/exclamation-icon.svg" alt="Icono de exclamación" class="icon"> Solo letras minúsculas y sin acentos</h6>
-                </div>
+            <div class="warning-container">
+                <h6 class="warning"><img src="assets/exclamation-icon.svg" alt="Icono de exclamación" class="icon"> Solo
+                    letras minúsculas y sin acentos</h6>
+            </div>
 
-                <div class="buttons-container">
-                    <button class="button-encriptar">Encriptar</button>
-                    <button class="button-desencriptar">Desencriptar</button>
-                </div>
+            <div class="buttons-container">
+                <button class="button-encriptar">Encriptar</button>
+                <button class="button-desencriptar">Desencriptar</button>
+            </div>
         </section>
 
         <section class="section-two">
             <div class="message-container">
-                <img src="assets/Muñeco.svg" class="message-img">
-                <h2>Ningún mensaje fue encontrado</h2>
-                <p>Ingresa el texto que desees encriptar o desencriptar.</p>
+                <div class="insert-text-container">
+                    <img src="assets/Muñeco.svg" class="message-img">
+                    <h2>Ningún mensaje fue encontrado</h2>
+                    <p>Ingresa el texto que desees encriptar o desencriptar.</p>
+                </div>
+                <textarea class="output-text" cols="30" rows="10"></textarea>
+                <button class="button-copy">Copiar</button>
             </div>
         </section>
     </main>
+    <script src="main.js"></script>
 </body>
+
 </html>
