Añade la funcion de copiar y estilos para tablet y celular

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="datos-footer">
+        <p>© Diana Ampudia Challenge ONE-Oracle Next Education G5</p>
+        <a href="https://linkedin.com/in/dianalauraampudia" target="blank"><img src="./assets/linkedin.png" alt="Logo de LinkedIn"/></a> <a href="https://github.com/DianaAmpudia" target="blank"><img  src="./assets/github.png" alt="Logo de Github"/></a>
+    </div>
+    </footer>
     <script src="main.js"></script>
 </body>
 
